public/css/main.css
/* 
 * Main CSS stylesheet 
 */

* {
  margin: 0;
  padding: 0;
  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

html,
body {
  height: 100%;
  color: white;
}

h1 {
    margin-top: 0;
    margin-bottom: 0;
}

h2 {
    margin-top: 0;
    margin-bottom: 0;
}

h3 {
    margin-top: 0;
    margin-bottom: 0;
}

h4 {
    margin-top: 0;
    margin-bottom: 0;
}

h5 {
    margin-top: 0;
    margin-bottom: 0;
}

p {
    margin-top: 0;
    margin-bottom: 0;
}

.view-frame {
    width: 100%;
    height: 100%;
}

#header {
    width: 100%;
    height: 100%;
    position: relative;
    text-align: center;
    background: url("../images/overlay-black.png") repeat center, url("../images/background.jpg") no-repeat center;
}

#header #header-text {
    position: absolute;
    width: 100%;
    top: 30%;
}

#header #header-text h4 {
    margin-top: 16px;
    color: rgba(255, 255, 255, 0.7);
}

#header #header-chevron {
    position: absolute;
    bottom: 4%;
    width: 100%;
}

#header #header-chevron-div {
    text-align: center;
    height: 56px;
    width: 56px;
}

#header #header-chevron #header-chevron-img {
    height: 100%;
    width: 100%;
}

.light-section {
    padding: 72px 0 72px;
    background: #EEEEEE;
    color: rgba(0, 0, 0, 0.87);
}

.light-section .secondary {
    color: rgba(0, 0, 0, 0.54);
}

.dark-section {
    padding: 72px 0 72px;
    background: #303030;
    color: rgba(255, 255, 255, 1.0);
}

.dark-section .secondary {
    color: rgba(255, 255, 255, 0.70);
}

.title {
    text-transform: uppercase;
}

.large-text {
    font-size: 1.3em;
    line-height: 175%;
}

.experience {
    margin-bottom: 48px;
}

.experience .experience-details h3 {
    margin-bottom: 8px;
}

.experience .experience-details h5 {
    margin-bottom: 8px;
}

.experience-container {
    margin-bottom: -48px;
}

#footer {
    padding: 32px 0 32px;
    background: rgb(10, 40, 70);
}

#footer p {
    color: rgba(255, 255, 255, 1.0);
    line-height: 100%;
}

#footer a {
    color: rgba(255, 255, 255, 0.7);
    line-height: 100%;
}

#footer .right {
    text-align: right;
}

